Name:                hit
Version:             0.3.0
Synopsis:            Git operations
Description:         Provides low level git operations
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hit
Cabal-Version:       >=1.8
data-files:          README.md
extra-source-files:  Tests/*.hs

Flag executable
  Description:       Build the executable
  Default:           False

Flag debug
  Description:       Add some debugging options
  Default:           False

Library
  Build-Depends:     base >= 4 && < 5
                   , mtl
                   , bytestring
                   , attoparsec >= 0.10.1
                   , parsec     >= 3
                   , filepath
                   , directory
                   , cryptohash
                   , vector
                   , random
                   , zlib
                   , zlib-bindings >= 0.1 && < 0.2
                   , bytedump
                   , time
  Exposed-modules:   Data.Git
                     Data.Git.Types
                     Data.Git.Storage
                     Data.Git.Storage.PackIndex
                     Data.Git.Storage.Pack
                     Data.Git.Storage.Object
                     Data.Git.Storage.Loose
                     Data.Git.Named
                     Data.Git.Delta
                     Data.Git.Ref
                     Data.Git.Revision
                     Data.Git.Repository
  Other-modules:     Data.Git.Internal
                     Data.Git.Storage.FileReader
                     Data.Git.Storage.FileWriter
                     Data.Git.Path
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           Hit
  Main-Is:           Hit.hs
  hs-source-dirs:    Hit
  ghc-options:       -Wall -fno-warn-missing-signatures
  if flag(debug)
    ghc-options:     -rtsops -auto-all -caf-all
  if flag(executable)
    Build-depends:   base >= 4 && < 5
                   , mtl
                   , containers
                   , hashable
                   , hashtables
                   , bytestring
                   , attoparsec >= 0.10.1
                   , parsec     >= 3
                   , filepath
                   , directory
                   , bytedump
                   , hit
    Buildable: True
  else
    Buildable: False

Test-Suite test-unit
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 3 && < 7
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , test-framework >= 0.3
                   , test-framework-quickcheck2 >= 0.2
                   , time
                   , hit

Test-Suite test-repository
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Repo.hs
  Build-depends:     base >= 3 && < 7
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , test-framework >= 0.3
                   , test-framework-quickcheck2 >= 0.2
                   , time
                   , bytedump
                   , hit

source-repository head
  type: git
  location: git://github.com/vincenthz/hit
