Name:                hit
Version:             0.6.3
Synopsis:            Git operations in haskell
Description:
    .
    An haskell implementation of git storage operations, allowing users
    to manipulate git repositories (read and write).
    .
    This implementation is fully interoperable with the main C implementation.
    .
    This is stricly only manipulating the git store (what's inside the .git directory),
    and doesn't do anything with the index or your working directory files.
    .
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hit
Cabal-Version:       >=1.8
data-files:          README.md
extra-source-files:  Tests/*.hs

Flag debug
  Description:       Add some debugging options
  Default:           False

Executable           Hit
  Main-Is:           Hit.hs
  hs-source-dirs:    Hit
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(debug)
    ghc-options:     -rtsopts -auto-all -caf-all
  Build-depends:     base >= 4 && < 7
                   , mtl
                   , containers
                   , hashable >= 1.2
                   , hashtables
                   , bytestring
                   , attoparsec >= 0.10.1
                   , parsec     >= 3
                   , filepath
                   , directory
                   , hourglass
                   , git >= 0.3.0

source-repository head
  type: git
  location: https://github.com/vincenthz/hit
