Name:                hit
Version:             0.7.0
Synopsis:            Git like program in haskell
Description:
    .
    Small haskell executable usable example using the git library
    .
    Library component is available at 'git'
    .
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Category:            Development
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hit
Cabal-Version:       >=1.8
data-files:          README.md

Flag debug
  Description:       Add some debugging options
  Default:           False

Executable           Hit
  Main-Is:           Hit.hs
  hs-source-dirs:    Hit
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  if flag(debug)
    ghc-options:     -rtsopts -auto-all -caf-all
  Build-depends:     base >= 4 && < 7
                   , containers
                   , hashable >= 1.2
                   , hashtables
                   , bytestring
                   , hourglass
                   , git >= 0.3.0

source-repository head
  type: git
  location: https://github.com/vincenthz/hit
